--- a/SistemaEscolar/Views/Estudiante/ListadoEstudiantes.cshtml
+++ b/SistemaEscolar/Views/Estudiante/ListadoEstudiantes.cshtml
@@ -18,18 +18,18 @@
 
         <div class="registro-cajatexto">
             <input type="text" name="name" value="" class="registro-cajatexto__input registro-cajatexto__input--estudiante" placeholder="Buscar Estudiantes" />
-            <i class="fa-solid fa-magnifying-glass registro-cajatexto__icono"></i>
+            @*<i class="fa-solid fa-magnifying-glass registro-cajatexto__icono"></i>*@
         </div>
     </div>
-
-    @Html.Partial("_data")
+    <div class="registro__buscador-data">
+        @Html.Partial("_data")
+    </div>
 </div>
 
 <div class="menu-lateral menu-lateral--estudiante">
     <nav class="nav">
         <div class="nav__seccion">
-            <button class="nav__boton-agregar">Agregar Estudiante</button>
-            @*<a href="@Url.Action("AgregarEstudiante", "Estudiante")" class="nav__boton-agregar">Agregar Estudiante</a>*@
+            <button class="nav__boton-agregar">Agregar Usuario</button>
         </div>
         <ul class="list">
             <li class="list__li"><a href="@Url.Action("ListadoEstudiantes", "Estudiante")" class="link link--menu-list">Todos</a></li>
