--- a/SistemaEscolar/Views/Inscripciones/Index.cshtml
+++ b/SistemaEscolar/Views/Inscripciones/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "ListadoProfesores";
+    ViewBag.Title = "Index";
 }
 
 <h3 class="mensaje-mantenimiento">Aún no está disponible este espacio, se encuentra en desarrollo!</h3>
-
 
