--- a/SistemaEscolar/Views/Login/Index.cshtml
+++ b/SistemaEscolar/Views/Login/Index.cshtml
@@ -6,9 +6,8 @@
     Layout = null;
 }
 
-<div> @ViewBag.Message</div>
 <div class="login container">
-
+    <div class="mensaje-mantenimiento">@ViewBag.Message</div>
     <div class="login-container">
 
         @using (Html.BeginForm())
@@ -16,16 +15,25 @@
             @Html.AntiForgeryToken()
 
             <div class="login__wrap">
-                @Html.Label("Ingrese su Correo", new { @class = "login__lbl-mail" })
-                @Html.TextBoxFor(u => u.CorreoUsuario, new { @class = "Login__txt-mail" })
+                <div class="login__cajas">
+                    @Html.Label("Ingrese su Correo", new { @class = "login__lbl-mail" })
+                </div>
+                <div class="login__cajas">
+                    @Html.TextBoxFor(u => u.CorreoUsuario, new { @class = "Login__txt-mail" })
+                </div>
             </div>
             <div class="login__wrap">
-                @Html.Label("Ingrese su contrasena", new { @class = "login__lbl-password" })
-                @Html.PasswordFor(u => u.ContrasenaUsuario, new { @class = "login__txt-password" })
+                <div class="login__cajas">
+                    @Html.Label("Ingrese su contrasena", new { @class = "login__lbl-password" })
+                </div>
+                <div class="login__cajas">
+                    @Html.PasswordFor(u => u.ContrasenaUsuario, new { @class = "login__txt-password" })
+                </div>
             </div>
             <div class="login__wrap">
                 <input type="submit" name="name" value="Entrar" class="login__submit" />
             </div>
         }
     </div>
+
 </div>
