--- a/SistemaEscolar/Views/Profesor/Index.cshtml
+++ b/SistemaEscolar/Views/Profesor/Index.cshtml
@@ -22,9 +22,9 @@
         </a>
     </div>
     <div class="tarjeta">
-        <a href="/Carrera/Index" class="tarjeta__enlace link">
+        <a href="/Materia/Index" class="tarjeta__enlace link">
             <div class="tarjeta__contenido">
-                <p class="tarjeta__titulo">Materias</p>
+                <p class="tarjeta__titulo">Cursos</p>
             </div>
             <div class="tarjeta__contenedor-img">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnePII1e1SUbUXLmeU1JrMyDMy_3yAhEqARg&usqp=CAU" class="tarjeta__img">
@@ -32,9 +32,9 @@
         </a>
     </div>
     <div class="tarjeta">
-        <a href="@Url.Action("index","Carrera")" class="tarjeta__enlace link">
+        <a href="@Url.Action("index","Inscripciones")" class="tarjeta__enlace link">
             <div class="tarjeta__contenido">
-                <p class="tarjeta__titulo">Carreras</p>
+                <p class="tarjeta__titulo">Inscripciones</p>
             </div>
             <div class="tarjeta__contenedor-img">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQomevU9Qoq_Pm_iWMGmR2w0cMbi0F6L1UHLw&usqp=CAU" class="tarjeta__img">
