--- a/SistemaEscolar/Views/Shared/_Layout.cshtml
+++ b/SistemaEscolar/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
 
                 if (tipoUsuario == 1)
                 {
-                    @Html.ActionLink("Control Escolar", "Index", "Estudiante", new { area = "" }, new { @class = "header__name-brand link" })
-
+                    @*@Html.ActionLink("Control Escolar", "Index", "Estudiante", new { area = "" }, new { @class = "header__name-brand link" })*@
+                    <p class="header__name-brand">Control Escolar</p>
                 }
                 else
                 {
@@ -49,7 +49,7 @@
 
                         if (tipoUsuario == 1)
                         {
-                            <li class="list__li">@Html.ActionLink("Inicio", "Index", "Estudiante", null, new { @class = "link link--menu-list" })</li>
+                            @*<li class="list__li">@Html.ActionLink("Inicio", "BuscarEstudiantesPorID", "Estudiante", null, new { @class = "link link--menu-list" })</li>*@
                         }
                         else
                         {
@@ -57,10 +57,6 @@
                         }
 
                     }
-                    <li class="list__li">@Html.ActionLink("Profesores", "ListadoProfesores", "Profesor", null, new { @class = "link link--menu-list" })</li>
-                    <li class="list__li">@Html.ActionLink("Estudiantes", "FiltrarEstudiante", "Estudiante", null, new { @class = "link link--menu-list" })</li>
-
-
                     @if (@Session["TipoUsuario"] != null && !string.IsNullOrEmpty(Session["TipoUsuario"].ToString()))
                     {
                         if (tipoUsuario == 1)
@@ -70,6 +66,8 @@
                         }
                         else
                         {
+                            <li class="list__li">@Html.ActionLink("Profesores", "ListadoProfesores", "Profesor", null, new { @class = "link link--menu-list" })</li>
+                            <li class="list__li">@Html.ActionLink("Estudiantes", "ListadoEstudiantes", "Estudiante", null, new { @class = "link link--menu-list" })</li>
                             <li class="list__li">@Html.ActionLink("Salir", "CerrarSesion", "Profesor", null, new { @class = "link link--menu-list" })</li>
                         }
 
@@ -82,10 +80,6 @@
     </header>
     <div class="body-content">
         @RenderBody()
-
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
-        </footer>
     </div>
     <script src="https://kit.fontawesome.com/ca6b9ed282.js"></script>
     @Scripts.Render("~/bundles/jquery")
