--- a/SistemaEscolar/Views/Shared/_data.cshtml
+++ b/SistemaEscolar/Views/Shared/_data.cshtml
@@ -7,7 +7,7 @@
 @if (Model.Count > 0)
 {
 
-    <div class="registro__lectura">
+    <div class="registro__lectura" style="padding-top:3rem;">
         @foreach (var estudiante in Model)
         {
 
@@ -21,8 +21,7 @@
                         <div class="datos__subtitulo">@Html.DisplayFor(model => estudiante.CorreoUsuario)</div>
                     </div>
                     <div class="datos__acciones">
-                        @*<a href="@Url.Action("EditarEstudiantesID","Estudiante", new { idestudiante = estudiante.IdEstudiante })" class="link-datos"><i class="fa-solid fa-pen-to-square informacion__icono"></i></a>*@
-                        <a href="@Url.Action("EliminarEstudiantesID","Estudiante", new { idestudiante = estudiante.IdEstudiante })" class="link-datos"><i class="fa-solid fa-trash informacion__icono"></i></a>
+                        <a href="#" class="link-datos"><i class="fa-solid fa-trash informacion__icono"></i></a>
                     </div>
                 </div>
             }
