--- a/SistemaEscolar/Views/Login/Index.cshtml
+++ b/SistemaEscolar/Views/Login/Index.cshtml
@@ -7,6 +7,32 @@
 }
 
 <div class="login container">
+
+    <div class="credenciales">
+        <div class="credenciales__wrapper">
+            <p class="credenciales__tipousuario">Panel Administrador</p>
+            <div class="credenciales__usuario">
+                <span class="credenciales__usuario">Correo:</span>
+                <span class="credenciales__correousuario">Hugo@gmail.com</span>
+            </div>
+            <div class="credenciales__usuario">
+                <span class="credenciales__usuario">Contraseña</span>
+                <span class="credenciales__contrasena">12345</span>
+            </div>
+
+        </div>
+        <div class="credenciales__wrapper">
+            <p class="credenciales__tipousuario">Panel Estudiante</p>
+            <div class="credenciales__usuario">
+                <span class="credenciales__usuario">Correo:</span>
+                <span class="credenciales__correousuario">Juan@gmail.com</span>
+            </div>
+            <div class="credenciales__usuario">
+                <span class="credenciales__usuario">Contraseña</span>
+                <span class="credenciales__contrasena">12345</span>
+            </div>
+        </div>
+    </div>
     <div class="mensaje-mantenimiento">@ViewBag.Message</div>
     <div class="login-container">
 
